@@ -16,6 +16,7 @@
             ESP8266: move code save section to fist partition for memory mapping for ESP8266_4MB (fix #1240)
             ESP8266: Add GPIO16 as D16 without watch (#1206) but soft PWM/I2C/SPI/etc 
             ESP8266: Remove osprintf for RELEASE=1 
+            Networkjs now forwards `socketType` - laying groundwork for UDP over AT command (#1232)
 
      1v94 : Allow Espruino boards to reset straight out of the DFU Bootloader             
             Improvements in handling errors in code running in IRQs
